# OpenGLWaterRipple

./: .gitignore  CMakeLists.txt  README.md
include/: Input_Controller.h  Texture.h  shaderClass.h
shaders/: default.frag  default.txt  default.vert
src/: Input_Controller.cpp  Texture.cpp  main.cpp  main.txt  shaderClass.cpp
